--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ h2 {
 }
 
 button {
-    border: none;
+    border: 1px solid black;
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
@@ -42,5 +42,9 @@ button {
 
 #save-btn {
     background: darkgreen;
+}
+
+#save-el {
+    font-weight: bold;
 }
 
