--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
     height: 100vh;
 }
 .container{
-    background: white;
+    background: yellowgreen;
     max-width: 80%;
     margin: auto;
     border: 3px solid black;
